# M5Stack-PaperS3-PlatformIO-LVGL

./: platformio-m5stack.ini  platformio.ini
include/: lv_conf.h  lv_port_disp_m5.hpp  lv_port_disp_template.h  main.hpp
lib/esp_freetype/: CMakeLists.txt
lib/esp_freetype/include/freetype/config/: ftconfig.h
lib/esp_new_jpeg/include/: jpeg_decoder.c
lib/lvgl_ui/: globals.xml  lvgl_ui.c  lvgl_ui.h  lvgl_ui_gen.c  lvgl_ui_gen.h  ui.c  ui.h
lib/lvgl_ui/components/icon/: icon.xml  icon_gen.c
lib/lvgl_ui/components/status_bar/: status_bar.xml  status_bar_gen.c  status_bar_gen.h
lib/lvgl_ui/components/text/: text.xml  text_gen.c  text_gen.h
lib/lvgl_ui/images/: battery_low_data.c  is_charging_data.c  wifi_icon_data.c
lib/lvgl_ui/lvgl/: lvgl.h
lib/lvgl_ui/screens/home/: home.xml  home_gen.c
lib/miniz/: miniz.c  miniz.h  miniz_tdef.c  miniz_tdef.h  miniz_zip.c
partitions/: small_app_fs.csv
script/: copy_resouces.sh
src/: freetype_setup.hpp  main.cpp
src/epub/: Epub.cpp  Epub.h  canvas_buffer.cpp  canvas_buffer.h
src/font_render/: OpenFontRender.h
src/home_screen/: home_screen.cpp  home_screen.h
src/lock_screen/: lock_screen.cpp  lock_screen.h
src/screen/home_screen/: home_screen.cpp  home_screen.h
src/sd_card/: ZipFile.cpp  ZipFile.h  sd_card.hpp
src/services/: sync_time_service.cpp  sync_time_service.h
src/status_bar/: status_bar.cpp  status_bar.h  status_bar.hpp
src/time/: MTime.cpp  MTime.h
src/zip_file/: ZipFile.cpp  ZipFile.h
